fix: move overflow to descContainer

--- a/public/scss/components/PopUpVoucherCoupon.module.scss
+++ b/public/scss/components/PopUpVoucherCoupon.module.scss
@@ -576,7 +576,7 @@
 
   max-width: 100vw;
   max-height: 80vh;
-  overflow-y: auto;
+  width: 100%;
 
   @media screen and (min-width: #{$breakpoint_min_sm})
   {
@@ -625,6 +625,7 @@
 .voucherDetailPopUpDescContainer
 {
   padding: 16px;
+  overflow-y: auto;
 }
 
 .voucherDetailPopUpTermsTitle
